# wadescript

./: .gitignore  CLAUDE.md  Cargo.toml  DATA_STRUCTURES_STATUS.md  Makefile  README.md  TESTING.md  TODO.md  package-lock.json  run_error_tests.sh  run_tests.sh  ws
benchmarks/: bench_phase3_escape.ws  bench_phase4_pure.ws  bench_phase4b_loop_hoisting.ws  bench_rc_overhead.ws  bench_rc_performance.ws  bench_simple.ws  bench_test.ws  bench_test2.ws  bench_test3.ws
docs/: BENCHMARK_RESULTS.md  BUILD.md  CLI.md  DATA_STRUCTURES.md  EXCEPTION_SYSTEM.md  FOR_LOOPS.md  HTTP.md  IMPORTS.md  LISTS.md  LSP.md  NAMED_ARGS.md  QUICKSTART.md  RC_IMPLEMENTATION.md  RC_LOOP_HOISTING.md  REPL.md  SLICES.md  TEST_SUITE_SUMMARY.md  TODO.md  TUPLES.md
examples/: arrays_test.ws  both_length_test.ws  bug_test.ws  class_demo.ws  class_tests.ws  comprehensive.ws  conditions.ws  dict_showcase.ws  dict_stress_test.ws  dict_test.ws  dict_update_test.ws  exact_bug_test.ws  exact_showcase_test.ws  factorial.ws  fibonacci.ws  for_loop_test.ws  for_loop_with_data.ws  for_loops_demo.ws  fstring_test.ws  functions_bug_test.ws  hello.ws  import_demo.ws  iteration_test.ws  length_in_fstring_test.ws  length_test.ws  list_length_only_test.ws  list_literal_dict_test.ws  list_literal_test.ws  list_methods.ws  list_simple.ws  list_test.ws  lists_complete.ws  lists_demo.ws  loops.ws  math_lib.ws  methods_test.ws  multi_import.ws  no_length_test.ws  print_demo.ws  print_test.ws  (+24 more)
runtime/: dict_runtime.c  list.c
src/: ast.rs  codegen.rs  jit.rs  language_defs.rs  lexer.rs  lexer.rs.bak  main.rs  parser.rs  (+3 more)
(+96 files in other folders)
