[package]
name = "wadescript"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.5", features = ["llvm17-0"] }
backtrace = "0.3"
lazy_static = "1.4"
rustyline = "14.0"
libc = "0.2"
ureq = "2.9"

# LSP dependencies
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
ropey = "1"

[lib]
name = "wadescript_runtime"
crate-type = ["staticlib"]
path = "src/runtime/lib.rs"
